dropshot/tests/fail/bad_endpoint26.rs
// Copyright 2024 Oxide Computer Company

#![allow(unused_imports)]

use dropshot::endpoint;
use dropshot::HttpError;
use dropshot::HttpResponseUpdatedNoContent;
use dropshot::RequestContext;

// Test: missing, required `path` attribute.

#[endpoint {
    method = GET,
}]
async fn bad_endpoint(
    _rqctx: RequestContext<()>,
) -> Result<HttpResponseUpdatedNoContent, HttpError> {
    Ok(HttpResponseUpdatedNoContent())
}

fn main() {}
